# Mouse-Droid

./: .gitignore  README.md
3D_print_files/custom_parts/: bottom_disco_dome_cover.stl  bottom_disco_platform.stl  disco_holder.stl  left_side_motor_bracket.stl  right_side_motor_bracket.stl  stepper_drive_gear.stl  stepper_driven_gear.stl  top_disco_dome_cover.stl  top_disco_platform.stl  wheel_and_hub_connector.stl
3D_print_files/original_parts/: Chassis_Rear_V4.stl  MSE_Lower_Portion6to10.stl  MSE_Upper_Portion_6to10.stl  MSE_base_6to10.stl  Mouse_Droid_Side_Circuit_Board_Rescaled.stl  TopLeftV4.stl  Top_FrontV4.stl  Top_RearV4.stl  Top_RoofV4.stl  Top_rightV4.stl
droid_setup/: cyclonedds.xml
droid_setup/ros2_ws/src/droid_interfaces/: CMakeLists.txt  (+1 more)
droid_setup/ros2_ws/src/droid_server_commands/: CMakeLists.txt  package.xml
droid_setup/ros2_ws/src/droid_server_commands/include/controller_PID/: PID.hpp
droid_setup/ros2_ws/src/droid_server_commands/include/imu_module/: RPi_BNO055.h
droid_setup/ros2_ws/src/droid_server_commands/include/libgpio/: Device.hpp  DigitalOutput.hpp  LED.hpp  MotorDirection.hpp  MotorDriver.hpp  PullDirection.hpp  Switch.hpp
droid_setup/ros2_ws/src/droid_server_commands/include/sound_module/: DYPlayer.hpp  SoundPlayer.hpp
droid_setup/ros2_ws/src/droid_server_commands/src/: DYPlayer.cpp  Device.cpp  DigitalOutput.cpp  MotorDirection.cpp  MotorDriver.cpp  PID.cpp  PullDirection.cpp  RPi_BNO055.cpp  SoundPlayer.cpp  Switch.cpp  droid_server.cpp
remote_setup/: .tmux.conf  Dockerfile
remote_setup/Scripts/: build.bash  run.bash
(+8 files in other folders)
